--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,14 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.20]
+        go-version: '^1.20'
     steps:
       - name: set up go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
       - name: build
-        run: sh ./build/package/build.sh
+        run: sh build/package/build.sh
       - name: upload build file
         uses: actions/upload-artifact@v3
         with:
