--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         go-version: ['^1.20']
     steps:
-      - uses: action/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: set up go
         uses: actions/setup-go@v4
