--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
           go-version: ${{ matrix.go-version }}
 
       - name: Build
-        run: sh ./build/package/build.sh
+        run: sh ./build/package/build.sh ${{ github.event.inputs.name }}
 
       - name: Upload build file
         uses: actions/upload-artifact@v3
